objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>Total_Rating__c  /  Count_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Attendees__c</fullName>
        <inlineHelpText>This field automatically counts the number of attendees.</inlineHelpText>
        <label>Count Attendees</label>
        <summaryForeignKey>Attendee__c.Master_Training_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Loc__c</fullName>
        <label>Loc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <inlineHelpText>Shows average rating given by all attendees.</inlineHelpText>
        <label>Total Rating</label>
        <summarizedField>Feedback__c.Rating__c</summarizedField>
        <summaryForeignKey>Feedback__c.Master_Training_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Training_Session_Type__c</fullName>
        <label>Training Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Loc__c</columns>
        <columns>Average_Rating__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>sdfgbngbfs</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Training_Session__c.Webinar</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Session_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Session_Date__c   &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Session_Date__c</errorDisplayField>
        <errorMessage>Session date should be in future.</errorMessage>
    </validationRules>
</CustomObject>